welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (finir=false) {
            ^